@@ -5,23 +5,21 @@
       dir="ltr" id="html">
   <head>
     <title>plone.app.discussion comments Test Suite</title>
-
-    <!-- pad js -->
-    <script type="text/javascript" src="../../browser/javascripts/comments.js">
-    </script>
     
-    <!-- QUnit -->
-    <link rel="stylesheet" href="../qunit/qunit.css" type=
-          "text/css" media="screen" />
-    <script type="text/javascript" src="../qunit/qunit.js">
-    </script>
-    <!-- Scripts -->
-    <script type="text/javascript" src="jquery.js">
+    <!-- qUnit -->
+    <link rel="stylesheet" href="../qunit/qunit.css" type="text/css" 
+          media="screen" />
+    <script type="text/javascript" src="../qunit/qunit.js"></script>
+	
+    <!-- jQuery -->
+    <script type="text/javascript" src="jquery.js"></script>
+	
+    <!-- plone.app.discussion -->
+    <script type="text/javascript" src="../../browser/javascripts/comments.js">
     </script>
 
     <!-- Tests -->
-    <script type="text/javascript" src="test_comments.js">
-    </script>
+    <script type="text/javascript" src="test_comments.js"></script>
 
   </head>
 
